# astrolens

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
docker/: entrypoint.sh
docs/design-docs/: architecture.md  facts.md  mcp.md  ranking.md  rendering.md  source-connectors.md
docs/evals/: hero-tools.md  mcp-production-hardening.md
docs/product-specs/: astrolens-prd.md
src/astrolens/: __init__.py
src/astrolens/api/: main.py
src/astrolens/connectors/: __init__.py  anthropic_llm.py  base.py  error_mapping.py  mast.py  registry.py  sesame.py  simbad_tap.py  skyview.py
src/astrolens/core/: enums.py  errors.py  models.py  provenance.py
src/astrolens/data/: __init__.py  seed.py
src/astrolens/mcp/: __init__.py  gallery_component.py  hardening.py  tools.py
tests/integration/: test_mast_live.py  test_sesame_live.py  test_simbad_live.py  test_skyview_live.py
tests/unit/: test_composites.py  test_connector_protocol.py  test_facts_compiler.py  test_fits_renderer.py  test_gallery_component.py  test_golden_v1.py  test_health.py  test_live_sources.py  test_mast_connector.py  test_mcp_protocol.py  test_models.py  test_openapi_contract.py  test_preview_image_quality.py  test_preview_normalizer.py  test_ranking_source_quality.py  test_root.py  test_sesame_connector.py  test_showcase.py  test_simbad_tap_connector.py  test_skyview_connector.py  test_summarizer.py  test_target_validation.py  test_v1_api.py  test_vision_ranker.py  test_visual_quality.py  test_warmer.py
(+40 files in other folders)
