[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "astrolens"
version = "0.1.0"
description = "Read-only evidence API for public astronomy data used by AI agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "astropy>=6,<8",
  "fastapi>=0.115,<1.0",
  "numpy>=1.26,<3",
  "pillow>=10,<12",
  "pydantic>=2.8,<3.0",
  "reproject>=0.14,<1",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pyright>=1.1,<2.0",
  "pytest>=8.2,<9.0",
  "ruff>=0.6,<1.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27,<1.0",
  "pyright>=1.1,<2.0",
  "pytest>=8.2,<9.0",
  "ruff>=0.6,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/astrolens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
markers = [
  "integration: live or externally dependent tests skipped unless explicitly enabled",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
